--- a/index.html
+++ b/index.html
@@ -2,18 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Border Animation by Radu</title>
-    <link rel="Stylesheet" href="style.css">
+    <title>NEO Digital</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-somehash" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  <div class="box">
-    <span></span>
-  </div>
-<input class="search">
-<article>
-    
-</article>
+    <canvas id="hero-bg"></canvas>
+    <section class="hero">
+        <h1>We Engineer the Future of Advertising</h1>
+    </section>
+
+    <section class="services" id="services">
+        <h2>Our Services</h2>
+        <div class="service-grid">
+            <div class="service-card">
+                <i class="fa-solid fa-bullseye"></i>
+                <h3>PPC</h3>
+            </div>
+            <div class="service-card">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <h3>SEO</h3>
+            </div>
+            <div class="service-card">
+                <i class="fa-solid fa-hashtag"></i>
+                <h3>Social Media</h3>
+            </div>
+            <div class="service-card">
+                <i class="fa-solid fa-robot"></i>
+                <h3>AI-Powered Campaigns</h3>
+            </div>
+        </div>
+    </section>
+
+    <section class="cases" id="cases">
+        <h2>Case Studies</h2>
+        <div class="case-grid">
+            <div class="case-card">
+                <h3>Project A</h3>
+                <p>Revolutionary campaign using AR tech.</p>
+                <a href="#" class="cta">Learn More</a>
+            </div>
+            <div class="case-card">
+                <h3>Project B</h3>
+                <p>AI driven PPC optimisation.</p>
+                <a href="#" class="cta">Learn More</a>
+            </div>
+            <div class="case-card">
+                <h3>Project C</h3>
+                <p>Social buzz with real-time engagement.</p>
+                <a href="#" class="cta">Learn More</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="about" id="about">
+        <h2>About Us</h2>
+        <div class="about-content">
+            <p>At NEO Digital we blend creativity with cutting-edge technology to craft campaigns that feel like the future.</p>
+            <img src="https://via.placeholder.com/400x250" alt="Team" class="holo">
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2>Contact Us</h2>
+        <form class="contact-form">
+            <input type="text" placeholder="Name" required>
+            <input type="email" placeholder="Email" required>
+            <textarea placeholder="Message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </section>
+
+    <!-- GSAP for animations -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-somehash" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
 </body>
 </html>
